code refactoring/ Parameters adjusting

--- a/get_extractor.ipynb
+++ b/get_extractor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,53 +10,66 @@
     "import pandas as pd\n",
     "from openpyxl import load_workbook\n",
     "import warnings\n",
+    "import os\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_last_dividend(ticker, *args):\n",
+    "# Code to the main function. It extracts the correct tickers values, even if passed as tuples, lists and also removes incorrect values.\n",
+    "\n",
+    "def get_last_dividend(ticker, *args) -> pd.DataFrame:\n",
     "  '''\n",
     "  Params:\n",
-    "  ticker = Ticker or list of tickers whose stock you want the information.\n",
+    "  ticker = Ticker or list of tickers whose stock you want information.\n",
     "  ============================================================================\n",
     "  Output:\n",
-    "  ticker = Returns a DataFrame with last dividend date and value for each ticker.\n",
+    "  last_dividends = Returns a DataFrame with last dividend information for each passed ticker.\n",
     "  '''\n",
-    "  tickers = (ticker,) + tuple(args)\n",
+    "  tickers = [ticker, *args]\n",
     "  last_dividends = pd.DataFrame()\n",
+    "  formated_tickers = []\n",
     "  for ticker in tickers:\n",
-    "    if type(ticker) != str and type(ticker) != list:\n",
-    "      raise TypeError(\"Ticker should be passed as a string or a list of strings\")\n",
-    "    if type(ticker) == list and len(ticker)>0:\n",
-    "      ticker = [ticker[i] for i in range(len(ticker)) if type(ticker[i]) == str]\n",
-    "      for n in range(len(ticker)):\n",
-    "        ticker_value = ticker[n]\n",
-    "        ticker_obj = yf.Ticker(ticker_value)\n",
-    "        dividends = ticker_obj.dividends.reset_index().tail(1)\n",
-    "        dividends['Date'] = dividends[\"Date\"].astype(str).apply(lambda x: x.split(' ').pop(0))\n",
-    "        dividends['Ticker'] = ticker_value\n",
-    "        last_dividends = pd.concat([last_dividends, dividends], ignore_index=True, axis=0)\n",
-    "    else:\n",
-    "      if type(ticker) != str: raise TypeError(\"Ticker should be passed as a string, multiple strings or a list of strings\")\n",
-    "      ticker_value = ticker\n",
-    "      ticker_obj = yf.Ticker(ticker_value)\n",
+    "    formated_tickers.append(ticker) if isinstance(ticker, str) else None\n",
+    "    if isinstance(ticker, (list, tuple)):\n",
+    "      for n in ticker:\n",
+    "        formated_tickers.append(n) if isinstance(n, str) else None\n",
+    "  if len(formated_tickers) == 0: raise ValueError(\"No valid ticker was identified.\")\n",
+    "  for form_ticker in formated_tickers:\n",
+    "    try:\n",
+    "      ticker_obj = yf.Ticker(form_ticker)\n",
     "      dividends = ticker_obj.dividends.reset_index().tail(1)\n",
     "      dividends['Date'] = dividends[\"Date\"].astype(str).apply(lambda x: x.split(' ').pop(0))\n",
-    "      dividends['Ticker'] = ticker_value\n",
+    "      dividends['Ticker'] = ticker_obj.ticker\n",
     "      last_dividends = pd.concat([last_dividends, dividends], ignore_index=True, axis=0)\n",
+    "    except:\n",
+    "      print(f'The value: {form_ticker} is not a valid ticker.')\n",
     "  return last_dividends"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "$PETR4: possibly delisted; no timezone found\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value: PETR4 is not a valid ticker.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -113,48 +126,62 @@
        "2  2024-12-26   1.339555   PETR4.SA"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_last_dividend((\"XPML11.SA\"), [\"KNIP11.SA\", 2], (\"PETR4.SA\", 2, 5))"
+    "# This cell shows the pandas DF output of the function.\n",
+    "\n",
+    "get_last_dividend((\"XPML11.SA\"), [\"KNIP11.SA\", 2], (\"PETR4.SA\", \"PETR4\", 5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "$PETR4: possibly delisted; no timezone found\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value: PETR4 is not a valid ticker.\n"
+     ]
+    }
+   ],
    "source": [
-    "dvds = get_last_dividend((\"XPML11.SA\"), [\"KNIP11.SA\", 2], (\"PETR4.SA\", 2, 5))\n",
-    "dvds.to_excel('./data/teste.xlsx', index=False)"
+    "# This cell saves the DataFrame as an excel file if it doesn't exists.\n",
+    "\n",
+    "dvds = get_last_dividend((\"XPML11.SA\"), [\"KNIP11.SA\", 2], (\"PETR4.SA\", \"PETR4\", 5))\n",
+    "if not os.path.exists(\"./data/teste.xlsx\"):\n",
+    "    os.mkdir(\"./data/\")\n",
+    "    dvds.to_excel('./data/teste.xlsx', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This cell appends new values to the excel files.\n",
     "\n",
     "workbook = load_workbook('data/teste.xlsx')  # Replace with your actual file name\n",
     "sheet = workbook.active  # Assuming you want to append to the active sheet\n",
     "# Assuming 'dvds' is your DataFrame with the last dividends\n",
     "dvds = get_last_dividend((\"XPLG11.SA\"))\n",
-    "for index, row in dds.iterrows():\n",
+    "for index, row in dvds.iterrows():\n",
     "    sheet.append([row['Date'], row['Dividends'], row['Ticker']])  # Adjust column names as needed\n",
-    "\n",
     "workbook.save('data/teste.xlsx')  # Save the changes back to the file"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
