added new values output

--- a/get_extractor.ipynb
+++ b/get_extractor.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,6 +181,85 @@
     "for index, row in dvds.iterrows():\n",
     "    sheet.append([row['Date'], row['Dividends'], row['Ticker']])  # Adjust column names as needed\n",
     "workbook.save('data/teste.xlsx')  # Save the changes back to the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Ticker</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-02-19</td>\n",
+       "      <td>0.920000</td>\n",
+       "      <td>XPML11.SA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-02-03</td>\n",
+       "      <td>0.950000</td>\n",
+       "      <td>KNIP11.SA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-12-26</td>\n",
+       "      <td>1.339555</td>\n",
+       "      <td>PETR4.SA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-02-03</td>\n",
+       "      <td>0.820000</td>\n",
+       "      <td>XPLG11.SA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date  Dividends     Ticker\n",
+       "0  2025-02-19   0.920000  XPML11.SA\n",
+       "1  2025-02-03   0.950000  KNIP11.SA\n",
+       "2  2024-12-26   1.339555   PETR4.SA\n",
+       "3  2025-02-03   0.820000  XPLG11.SA"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking if new values were saved\n",
+    "\n",
+    "pd.read_excel(\"./data/teste.xlsx\")"
    ]
   }
  ],
