--- a/get_dividends.ipynb
+++ b/get_dividends.ipynb
@@ -6,12 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "import yfinance as yf\n",
     "import pandas as pd\n",
-    "from openpyxl import load_workbook\n",
-    "import warnings\n",
-    "import os\n",
-    "warnings.filterwarnings('ignore')"
+    "from openpyxl import load_workbook"
    ]
   },
   {
